--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "dependencies": {
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "formik": "^2.2.9",
     "next": "13.3.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.1.5",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "eslint": "7",
+    "eslint-config-next": "12.0.4"
   }
 }
