--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-project",
+  "name": "nextpls",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "formik": "^2.2.9",
-    "next": "13.3.2",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "swr": "^2.1.5",
-    "tailwindcss": "3.3.2",
-    "yup": "^0.32.11"
-  },
-  "devDependencies": {
-    "eslint": "7",
-    "eslint-config-next": "12.0.4"
+    "next": "^13.4.1",
+    "next-auth": "^4.22.1",
+    "redux": "^4.2.1"
   }
 }
